<resources>
    <string name="app_name">App2</string>
    <string name="search_bar_hint">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="herken_de_vlinder">Herken de vlinder</string>
    <string name="vlinderkleur">Vlinderkleur:</string>
    <string name="oranje">Oranje</string>
    <string name="argusvlinder">Argusvlinder</string>
    <string name="lasiommata_megera">(Lasiommata megera)</string>
    <string name="bont_zandoogje">Bont Zandoogje</string>
    <string name="pararge_aegeria">(Pararge aegeria)</string>
    <string name="bruin_zandoogje">Bruin Zandoogje</string>
    <string name="maniola_jurtina">(Maniola jurtina)</string>
    <string name="distelvlinder">Distelvlinder</string>
    <string name="vanessa_cardui">(Vanessa cardui)</string>
    <string name="vlinders_met_vakantie">Vlinders met vakantie</string>
    <string name="dikkopjes">Dikkopjes:</string>
    <string name="zwart">Zwartsprietdikkopje</string>
    <string name="thymelicus_lineola">(Thymelicus lineola)</string>
    <string name="bretons">Bretons spikkeldikkopje</string>
    <string name="pyrgus_arm">(Pyrgus armoricanus)</string>
    <string name="aardbeivlinder">Aardbeivlinder</string>
    <string name="pyrgus_malvae">(Pyrgus malvae)</string>
    <string name="grote_pages">Grote pages:</string>
    <string name="koninginnenpage">Koninginnenpage</string>
    <string name="papilio_machaon">(Papilio machaon)</string>
    <string name="telling_opslaan">Telling opslaan</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>








</resources>