<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_of_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="28dp"
            android:paddingBottom="25dp"
            android:src="@drawable/back2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/text_colour"
            android:text="@string/vlinders_met_vakantie" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingTop="28dp"
            android:paddingEnd="10dp"
            android:paddingBottom="25dp"
            android:src="@drawable/hameburger" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingTop="7dp"
        android:text="@string/dikkopjes"
        android:textColor="@color/text_colour"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingBottom="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/butterfly1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/zwart"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thymelicus_lineola"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/minus"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/button"/>

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/text_colour"
                    android:text="@string/zero"/>

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/plus"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/button"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingBottom="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/butterfly2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/bretons"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pyrgus_arm"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/minus"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/button"/>

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/text_colour"
                    android:text="@string/one"/>

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/plus"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/button"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingBottom="8dp"
            android:src="@drawable/butterfly3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/aardbeivlinder"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pyrgus_malvae"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/minus"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/button"/>

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/text_colour"
                    android:text="@string/zero"/>

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/plus"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/button"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingTop="18dp"
        android:text="@string/grote_pages"
        android:textColor="@color/text_colour"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:paddingStart="10dp"
            android:paddingBottom="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/butterfly6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/koninginnenpage"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/papilio_machaon"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/text_colour" />

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@drawable/button2"
        android:text="@string/telling_opslaan"
        android:textColor="@color/text_colour"
        android:textSize="18sp" />

</LinearLayout>